--- a/.github/workflows/main_scoringwilson.yml
+++ b/.github/workflows/main_scoringwilson.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - scoringwilson
+name: Build and deploy Python app and dashboard to Azure Web App - scoringwilson
 
 on:
   push:
@@ -31,13 +31,13 @@ jobs:
         run: pip install -r requirements.txt
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Run unit tests
+        run: python -m pytest
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
         with:
-          name: python-app
+          name: dash
           path: |
             release.zip
             !venv/
@@ -53,7 +53,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: python-app
+          name: dash
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
