--- a/.github/workflows/main_scoringwilson.yml
+++ b/.github/workflows/main_scoringwilson.yml
@@ -53,8 +53,8 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: python-app
-
+          name: List Files
+          run: ls -R
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
