--- a/.github/workflows/main_scoringwilson.yml
+++ b/.github/workflows/main_scoringwilson.yml
@@ -62,6 +62,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'dash'
+          app-name: 'scoringwilson'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_71A65CE069C74ADCBD79DC4E70003C12 }}
