--- a/.github/workflows/main_scoringwilson.yml
+++ b/.github/workflows/main_scoringwilson.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app and dashboard to Azure Web App - scoringwilson
+name: Build and deploy Python app to Azure Web App - scoringwilson
 
 on:
   push:
@@ -31,8 +31,8 @@ jobs:
         run: pip install -r requirements.txt
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      - name: Run unit tests
-        run: pytest tests.py
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
@@ -54,7 +54,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: python-app
-    
+
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
@@ -62,6 +62,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: '$scoringwilson'
+          app-name: 'scoringwilson'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_71A65CE069C74ADCBD79DC4E70003C12 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_210D29B0CF664217A08847BBB11712B5 }}
