--- a/.github/workflows/main_wilscoring.yml
+++ b/.github/workflows/main_wilscoring.yml
@@ -31,8 +31,8 @@ jobs:
         run: pip install -r requirements.txt
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: tests unitaires
+        run: pytest tests.py
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
