--- a/.github/workflows/main_wilscoring.yml
+++ b/.github/workflows/main_wilscoring.yml
@@ -30,7 +30,10 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      # run tests (PyTest)
+      - name: Run uni tests
+        run: python -m pytest tests.py
+
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
